anuj/anime_demo_02: inner circle alignment fixed.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -46,6 +46,7 @@ body {
 	display: flex;
 	justify-content: center;
 	position: relative;
+	overflow: hidden;
 }
 
 .circle_inner {
